<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstallerMon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="options_button_name">Options</string>
    <string name="survey_button_name">Survey</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="menu_activity_header_text">Main Menu</string>
    <string name="site_survey">Site Survey</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="options_activity_header_text">Options</string>
    <string name="survey_activity_header_text">Site Survey</string>
    <string name="activity_options_debug_button_on">Debug On</string>
    <string name="activity_options_debug_button_off">Debug Off</string>
    <string name="activity_options_username_button_text">Username</string>
    <string name="title_activity_username">UsernameActivity</string>
    <string name="username_activity_header_text">Username &amp; Password</string>
    <string name="username_activity_submitButton_text">Submit</string>
    <string name="username_activity_cancelButton_text">Cancel</string>
    <string name="activity_survey_clickToSurveyButtonText">Click To Survey</string>

</resources>