
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" >

        <RelativeLayout
            android:id="@+id/activity_menu_relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/activity_menu_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingTop="6dp"
                android:text="@string/menu_activity_header_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/activity_menu_imageView1"
                android:layout_width="170dp"
                android:layout_height="75dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/dplogo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_menu_relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp" >

            <Button
                android:id="@+id/activity_menu_survey_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/survey_button_name"
                android:onClick="surveyClicked" />

            <Button
                android:id="@+id/activity_menu_options_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/options_button_name"
                android:onClick="optionsClicked" />

        </RelativeLayout>

    </RelativeLayout>
